[tool.poetry]
name = "change-connectors"
version = "0.1.0"
description = ""
authors = ["alejandro_rh <alejandro.ramoshernandez@fivetran.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
